# cheep

./: .gitignore  LICENSE  README.md  pyproject.toml
results/: categorized-21-07-2024.json
src/: main.py  model.py  utils.py
src/cli/: classifier.py  train.py
src/models/: bert.py  dialogpt.py  preprocess_data.py
src/scraper/: data_scraper.py
src/server/: category.py  player.py  server.py  state.py  static_game.py  word.py
src/ui/cheep/: package-lock.json  package.json
src/ui/cheep/public/: index.html  manifest.json
src/ui/cheep/src/: Cheep.css  Cheep.js  index.js
src/ui/cheep/src/components/: Grid.css  Grid.js  Word.css  Word.js
