[project]
name = "cheep"
authors = [{name = "Viven Iyer", email = "viveniyer304@gmail.com"}]
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "transformers",
    "scikit-learn",
    "torch",
    "Flask",
    "flask_cors",
    "attrs",
    "cattrs",
    "selenium",
    "datasets"
]

[tool.setuptools.packages]
find = {}

[project.scripts]
classifier-cli = "src.cli.classifier:run"
train-cli = "src.cli.train:run"
cheep-server = "src.server.server:run"